# elementary-app-template

./: CMakeLists.txt
data/: com.wbuarque.elementary-app.appdata.xml  com.wbuarque.elementary-app.desktop
debian/: changelog  control  copyright
po/: CMakeLists.txt  com.wbuarque.elementary-app.pot  pt_BR.po
src/: template  template.vala
